--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "lint:fix": "yarn run eslint --fix src",
         "lint:css": "stylelint src/**/*.css",
         "generate": "cross-env TS_NODE_PROJECT='./internals/ts-node.tsconfig.json' plop --plopfile internals/generators/plopfile.ts",
-        "prettify": "prettier --write --ignore-unknown src/**/*",
+        "prettify": "prettier --write --ignore-unknown",
         "extract-messages": "i18next-scanner --config=internals/extractMessages/i18next-scanner.config.js"
     },
     "dependencies": {
@@ -43,15 +43,13 @@
         "eslint-config-prettier": "6.11.0",
         "eslint-plugin-prettier": "3.1.4",
         "eslint-plugin-react-hooks": "4.1.0",
-        "fontfaceobserver": "2.1.0",
-        "husky": "4.2.5",
+        "eslint-plugin-simple-import-sort": "^7.0.0",
         "i18next": "19.7.0",
         "i18next-browser-languagedetector": "6.0.1",
         "i18next-scanner": "2.11.0",
         "inquirer": "7.3.3",
         "inquirer-directory": "2.2.0",
         "jest-styled-components": "7.0.3",
-        "lint-staged": "10.3.0",
         "node-plop": "0.26.2",
         "plop": "2.7.4",
         "prettier": "2.1.1",
@@ -77,6 +75,7 @@
         "stylelint-processor-styled-components": "1.10.0",
         "ts-node": "9.0.0",
         "typescript": "4.1.3",
+        "uniqid": "^5.3.0",
         "web-vitals": "0.2.4"
     },
     "browserslist": {
@@ -99,14 +98,9 @@
         "*.{ts,tsx,js,jsx}": [
             "yarn run eslint --fix"
         ],
-        "*.{md,json}": [
+        "*": [
             "yarn run prettify"
         ]
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "yarn run checkTs && lint-staged"
-        }
     },
     "jest": {
         "collectCoverageFrom": [
@@ -125,5 +119,9 @@
                 "statements": 90
             }
         }
+    },
+    "devDependencies": {
+        "husky": "^6.0.0",
+        "lint-staged": "^11.0.0"
     }
 }
