--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@testing-library/react": "11.0.2",
         "@types/fontfaceobserver": "0.0.6",
         "@types/jest": "25.1.4",
+        "@types/lodash": "^4.14.169",
         "@types/node": "14.6.4",
         "@types/react": "17.0.0",
         "@types/react-dom": "16.9.8",
