--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
         "lint:css": "stylelint src/**/*.css",
         "generate": "cross-env TS_NODE_PROJECT='./internals/ts-node.tsconfig.json' plop --plopfile internals/generators/plopfile.ts",
         "prettify": "prettier --write --ignore-unknown",
-        "extract-messages": "i18next-scanner --config=internals/extractMessages/i18next-scanner.config.js",
-        "prepare": "husky install"
+        "extract-messages": "i18next-scanner --config=internals/extractMessages/i18next-scanner.config.js"
     },
     "dependencies": {
+        "@date-io/date-fns": "1.3.13",
         "@material-ui/core": "^4.11.4",
         "@material-ui/icons": "^4.11.2",
+        "@material-ui/lab": "^4.0.0-alpha.58",
+        "@material-ui/pickers": "3.2.8",
         "@reduxjs/toolkit": "1.4.0",
         "@testing-library/jest-dom": "5.11.4",
         "@testing-library/react": "11.0.2",
@@ -42,6 +44,7 @@
         "@types/webpack-env": "1.15.2",
         "chalk": "4.1.0",
         "cross-env": "7.0.2",
+        "date-fns": "2.8.1",
         "eslint-config-prettier": "6.11.0",
         "eslint-plugin-prettier": "3.1.4",
         "eslint-plugin-react-hooks": "4.1.0",
