--- a/package.json
+++ b/package.json
@@ -7,12 +7,10 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "test:generators": "ts-node --project=./internals/ts-node.tsconfig.json ./internals/testing/generators/test-generators.ts",
         "start:prod": "yarn run build && serve -s build",
         "checkTs": "tsc --noEmit",
-        "eslint": "eslint --ext js,ts,tsx",
-        "lint": "yarn run eslint src",
-        "lint:fix": "yarn run eslint --fix src",
+        "lint": "eslint --ext js,ts,tsx src",
+        "lint:fix": "yarn run eslint src --fix",
         "lint:css": "stylelint src/**/*.css",
         "generate": "cross-env TS_NODE_PROJECT='./internals/ts-node.tsconfig.json' plop --plopfile internals/generators/plopfile.ts",
         "prettify": "prettier --write --ignore-unknown",
@@ -84,6 +82,10 @@
         "uniqid": "^5.3.0",
         "web-vitals": "0.2.4"
     },
+    "devDependencies": {
+        "husky": "^6.0.0",
+        "lint-staged": "^11.0.0"
+    },
     "browserslist": {
         "production": [
             ">0.2%",
@@ -107,27 +109,5 @@
         "*": [
             "yarn run prettify"
         ]
-    },
-    "jest": {
-        "collectCoverageFrom": [
-            "src/**/*.{js,jsx,ts,tsx}",
-            "!src/**/*/*.d.ts",
-            "!src/**/*/Loadable.{js,jsx,ts,tsx}",
-            "!src/**/*/messages.ts",
-            "!src/**/*/types.ts",
-            "!src/index.tsx"
-        ],
-        "coverageThreshold": {
-            "global": {
-                "branches": 90,
-                "functions": 90,
-                "lines": 90,
-                "statements": 90
-            }
-        }
-    },
-    "devDependencies": {
-        "husky": "^6.0.0",
-        "lint-staged": "^11.0.0"
     }
 }
