--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "start:prod": "yarn run build && serve -s build",
-        "checkTs": "tsc --noEmit",
+        "ts": "tsc --noEmit",
         "lint": "eslint --ext js,ts,tsx src",
         "lint:fix": "yarn run eslint src --fix",
         "lint:css": "stylelint src/**/*.css",
@@ -44,6 +44,7 @@
         "cross-env": "7.0.2",
         "date-fns": "2.8.1",
         "eslint-config-prettier": "6.11.0",
+        "eslint-plugin-import": "^2.25.2",
         "eslint-plugin-prettier": "3.1.4",
         "eslint-plugin-react-hooks": "4.1.0",
         "eslint-plugin-simple-import-sort": "^7.0.0",
