--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-    "name": "frontend",
+    "name": "todo-app-front-end",
     "version": "0.1.0",
     "private": true,
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test",
         "eject": "react-scripts eject",
         "start:prod": "yarn run build && serve -s build",
         "ts": "tsc --noEmit",
@@ -23,21 +22,15 @@
         "@material-ui/lab": "^4.0.0-alpha.58",
         "@material-ui/pickers": "3.2.8",
         "@reduxjs/toolkit": "1.4.0",
-        "@testing-library/jest-dom": "5.11.4",
-        "@testing-library/react": "11.0.2",
-        "@types/fontfaceobserver": "0.0.6",
-        "@types/jest": "25.1.4",
         "@types/lodash": "^4.14.169",
         "@types/node": "14.6.4",
         "@types/react": "17.0.0",
         "@types/react-dom": "16.9.8",
         "@types/react-redux": "7.1.9",
         "@types/react-router-dom": "5.1.5",
-        "@types/react-test-renderer": "16.9.3",
         "@types/rimraf": "3.0.0",
         "@types/shelljs": "0.8.8",
         "@types/styled-components": "5.1.3",
-        "@types/testing-library__jest-dom": "5.9.2",
         "@types/webpack": "4.41.22",
         "@types/webpack-env": "1.15.2",
         "chalk": "4.1.0",
@@ -53,7 +46,6 @@
         "i18next-scanner": "2.11.0",
         "inquirer": "7.3.3",
         "inquirer-directory": "2.2.0",
-        "jest-styled-components": "7.0.3",
         "node-plop": "0.26.2",
         "plop": "2.7.4",
         "prettier": "2.1.1",
@@ -66,7 +58,6 @@
         "react-redux": "7.2.1",
         "react-router-dom": "5.2.0",
         "react-scripts": "4.0.3",
-        "react-test-renderer": "16.13.1",
         "redux-injectors": "1.3.0",
         "redux-saga": "1.1.3",
         "rimraf": "3.0.2",
@@ -80,13 +71,9 @@
         "stylelint-processor-styled-components": "1.10.0",
         "ts-node": "9.0.0",
         "typescript": "4.1.3",
-        "uniqid": "^5.3.0",
-        "web-vitals": "0.2.4"
+        "uniqid": "^5.3.0"
     },
-    "devDependencies": {
-        "husky": "^6.0.0",
-        "lint-staged": "^11.0.0"
-    },
+    "devDependencies": {},
     "browserslist": {
         "production": [
             ">0.2%",
@@ -102,13 +89,5 @@
     "engines": {
         "npm": ">=6.4.1",
         "node": ">=10.13.0"
-    },
-    "lint-staged": {
-        "*.{ts,tsx,js,jsx}": [
-            "yarn run eslint --fix"
-        ],
-        "*": [
-            "yarn run prettify"
-        ]
     }
 }
