--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -3,33 +3,28 @@ on:
   pull_request:
     types: [synchronize]
 
-env:
-  NODE_VERSION: '16'
-  RUNS_ON: 'ubuntu-latest'
-  QA_ID: 'pull-request-${{ github.event.pull_request.number }}'
-
 jobs:
   setup:
     name: Setup Pipeline
-    runs-on: ${{ env.RUNS_ON}}
+    runs-on: 'ubuntu-latest'
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: '16'
           cache: 'yarn'
       - run: yarn install
           
   build:
     name: Build frontend
-    runs-on: ${{ env.RUNS_ON}}
+    runs-on: 'ubuntu-latest'
     needs: setup
     steps:
       - run: yarn build
 
   test:
     name: Test frontend
-    runs-on: ${{ env.RUNS_ON}}
+    runs-on: 'ubuntu-latest'
     needs: [setup, build]
     steps:
       - run: yarn test
@@ -37,7 +32,7 @@ jobs:
 
   preview:
     name: Deploy to Firebase Hosting preview (QA)
-    runs-on: ${{ env.RUNS_ON}}
+    runs-on: 'ubuntu-latest'
     needs: [setup, build, test]
     if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}' # exclude PR from forks
     steps:
@@ -46,4 +41,4 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_TASKS_OUREAPP }}'
           projectId: '${{ secrets.FIREBASE_ID }}'
-          channelId: ${{ env.QA_ID }}
+          channelId: 'pull-request-${{ github.event.pull_request.number }}'
