--- a/.github/workflows/firebase-hosting-release.yml
+++ b/.github/workflows/firebase-hosting-release.yml
@@ -3,33 +3,28 @@ on:
   release:
     types: [published]
 
-env:
-  NODE_VERSION: '16'
-  RUNS_ON: 'ubuntu-latest'
-  PREPROD_ID: 'preprod'
-
 jobs:
   setup:
     name: Setup Pipeline
-    runs-on: ${{ env.RUNS_ON}}
+    runs-on: 'ubuntu-latest'
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: '16'
           cache: 'yarn'
       - run: yarn install
           
   build:
     name: Build frontend
-    runs-on: ${{ env.RUNS_ON}}
+    runs-on: 'ubuntu-latest'
     needs: setup
     steps:
       - run: yarn build
 
   test:
     name: Test frontend
-    runs-on: ${{ env.RUNS_ON}}
+    runs-on: 'ubuntu-latest'
     needs: [setup, build]
     steps:
       - run: yarn test
@@ -37,11 +32,11 @@ jobs:
 
   preview:
     name: Deploy to Firebase Hosting live (Prod)
-    runs-on: ${{ env.RUNS_ON}}
+    runs-on: 'ubuntu-latest'
     needs: [setup, build, test]
     steps:
       - uses: w9jds/firebase-action@master
         with:
-          args: hosting:clone ${{ secrets.FIREBASE_ID }}:${{ env.PREPROD_ID }} ${{ secrets.FIREBASE_ID }}:live
+          args: hosting:clone ${{ secrets.FIREBASE_ID }}:preprod ${{ secrets.FIREBASE_ID }}:live
         env:
           FIREBASE_TOKEN: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_TASKS_OUREAPP }}'
