--- a/.github/workflows/firebase-hosting-pr-close.yml
+++ b/.github/workflows/firebase-hosting-pr-close.yml
@@ -8,6 +8,7 @@ jobs:
     name: Delete Firebase Hosting preview (QA) for this PR
     runs-on: 'ubuntu-latest'
     steps:
+      - uses: actions/checkout@v2
       - uses: w9jds/firebase-action@master
         with:
           args: hosting:channel:delete 'pull-request-${{ github.event.pull_request.number }}'
