--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -1,41 +1,64 @@
-name: Build, Test, Deploy Preprod
+name: Build, Test & Deploy Preprod
 on:
   push:
     branches: [main]
 
 jobs:
-  setup:
-    name: Setup Pipeline
-    runs-on: 'ubuntu-latest'
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '16'
-          cache: 'yarn'
-      - run: yarn install
-          
   build:
     name: Build frontend
     runs-on: 'ubuntu-latest'
-    needs: setup
     steps:
-      - run: yarn build
+      - uses: actions/checkout@v2
+
+      - name: Setup Yarn
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+          cache: 'yarn'
+
+      - name: Install dependencies
+        run: yarn install
+
+      - name: Build app
+        run: yarn build
+
+      - name: Upload build
+        uses: actions/upload-artifact@v2
+        with:
+          name: frontend-preprod
+          path: build
 
   test:
     name: Test frontend
     runs-on: 'ubuntu-latest'
-    needs: [setup, build]
     steps:
+      - uses: actions/checkout@v2
+
+      - name: Setup Yarn
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+          cache: 'yarn'
+
+      - name: Install dependencies
+        run: yarn install
+
+      - name: Test app
       - run: yarn test
       # todo : add code coverage reports
 
-  preview:
+  deploy_preprod:
     name: Deploy to Firebase Hosting preview (Preprod)
     runs-on: 'ubuntu-latest'
-    needs: [setup, build, test]
+    needs: [build, test]
     steps:
+      - uses: actions/download-artifact@v2
+        name: Download build
+        with:
+          name: frontend-preprod
+
       - uses: FirebaseExtended/action-hosting-deploy@v0
+        name: Deploy to preprod
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_TASKS_OUREAPP }}'
