--- a/.github/workflows/firebase-hosting-release.yml
+++ b/.github/workflows/firebase-hosting-release.yml
@@ -1,41 +1,65 @@
-name: Build, Test, Deploy Prod
+name: Build, Test & Deploy Prod
 on:
   release:
     types: [published]
 
 jobs:
-  setup:
-    name: Setup Pipeline
-    runs-on: 'ubuntu-latest'
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '16'
-          cache: 'yarn'
-      - run: yarn install
-          
   build:
     name: Build frontend
     runs-on: 'ubuntu-latest'
-    needs: setup
     steps:
-      - run: yarn build
+      - uses: actions/checkout@v2
+
+      - name: Setup Yarn
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+          cache: 'yarn'
+
+      - name: Install dependencies
+        run: yarn install
+
+      - name: Build app
+        run: yarn build
+
+      - name: Upload build
+        uses: actions/upload-artifact@v2
+        with:
+          name: frontend-preprod
+          path: build
 
   test:
     name: Test frontend
     runs-on: 'ubuntu-latest'
-    needs: [setup, build]
     steps:
+      - uses: actions/checkout@v2
+
+      - name: Setup Yarn
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+          cache: 'yarn'
+
+      - name: Install dependencies
+        run: yarn install
+
+      - name: Test app
       - run: yarn test
       # todo : add code coverage reports
 
-  preview:
+  deploy_qa:
     name: Deploy to Firebase Hosting live (Prod)
     runs-on: 'ubuntu-latest'
-    needs: [setup, build, test]
+    needs: [build, test]
+    if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}' # exclude PR from forks
     steps:
+      - uses: actions/download-artifact@v2
+        name: Download build
+        with:
+          name: frontend-preprod
+
       - uses: w9jds/firebase-action@master
+        name: Deploy to Prod
         with:
           args: hosting:clone ${{ secrets.FIREBASE_ID }}:preprod ${{ secrets.FIREBASE_ID }}:live
         env:
