--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -8,7 +8,8 @@ jobs:
     name: Build frontend
     runs-on: 'ubuntu-latest'
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout branch
+        uses: actions/checkout@v2
 
       - name: Setup Yarn
         uses: actions/setup-node@v2
@@ -32,7 +33,8 @@ jobs:
     name: Test frontend
     runs-on: 'ubuntu-latest'
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout branch
+        uses: actions/checkout@v2
 
       - name: Setup Yarn
         uses: actions/setup-node@v2
@@ -53,13 +55,13 @@ jobs:
     needs: [build, test]
     if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}' # exclude PR from forks
     steps:
-      - uses: actions/download-artifact@v2
-        name: Download build
+      - name: Download build
+        uses: actions/download-artifact@v2
         with:
           name: frontend-preprod
 
-      - uses: FirebaseExtended/action-hosting-deploy@v0
-        name: Deploy to QA
+      - name: Deploy to QA
+        uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_TASKS_OUREAPP }}'
