--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -54,6 +54,9 @@ jobs:
     runs-on: 'ubuntu-latest'
     needs: [build, test]
     steps:
+      - name: Checkout branch
+        uses: actions/checkout@v2
+        
       - name: Download build
         uses: actions/download-artifact@v2
         with:
