--- a/.github/workflows/firebase-hosting-pr-close.yml
+++ b/.github/workflows/firebase-hosting-pr-close.yml
@@ -8,6 +8,9 @@ jobs:
     name: Delete Firebase Hosting preview (QA)
     runs-on: 'ubuntu-latest'
     steps:
+      - name: Checkout branch
+        uses: actions/checkout@v2
+        
       - name: Delete Firebase Hosting channel
       - uses: w9jds/firebase-action@master
         with:
