--- a/.github/workflows/firebase-hosting-pr-close.yml
+++ b/.github/workflows/firebase-hosting-pr-close.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Delete Firebase Hosting channel
-      - uses: w9jds/firebase-action@master
+        uses: w9jds/firebase-action@master
         with:
           args: hosting:channel:delete 'pull-request-${{ github.event.pull_request.number }}'
         env:
