--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -61,6 +61,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: frontend-preprod
+          path: build
 
       - name: Deploy to preprod
         uses: FirebaseExtended/action-hosting-deploy@v0
