--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -62,6 +62,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: frontend-preprod
+          path: build
 
       - name: Deploy to QA
         uses: FirebaseExtended/action-hosting-deploy@v0
