--- a/.github/workflows/firebase-hosting-pr-close.yml
+++ b/.github/workflows/firebase-hosting-pr-close.yml
@@ -10,10 +10,12 @@ jobs:
     steps:
       - name: Checkout branch
         uses: actions/checkout@v2
-        
-      - name: Delete Firebase Hosting channel
-        uses: w9jds/firebase-action@master
+
+      - name: Setup Node
+        uses: actions/setup-node@v2
         with:
-          args: hosting:channel:delete 'pull-request-${{ github.event.pull_request.number }}'
-        env:
-          FIREBASE_TOKEN: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_TASKS_OUREAPP }}'
+          node-version: '16'
+          
+      - name: Delete Firebase Hosting channel
+        run: npx firebase hosting:channel:delete 'pull-request-${{ github.event.pull_request.number }}' --token '${{ secrets.FIREBASE_CI_TOKEN }}'
+        
