--- a/.github/workflows/firebase-hosting-pr-close.yml
+++ b/.github/workflows/firebase-hosting-pr-close.yml
@@ -17,5 +17,7 @@ jobs:
           node-version: '16'
           
       - name: Delete Firebase Hosting channel
-        run: npx firebase hosting:channel:delete 'pull-request-${{ github.event.pull_request.number }}' --token '${{ secrets.FIREBASE_CI_TOKEN }}'
+        run: |
+          npm install -g firebase-tools
+          firebase hosting:channel:delete 'pull-request-${{ github.event.pull_request.number }}' --token '${{ secrets.FIREBASE_CI_TOKEN }}'
         
