Revert "fake change"
This reverts commit 898ed6f6e6be2348f685ba63ccf7922f608ad248.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "test": "echo nothing to see there YET !!!",
+        "test": "echo nothing to see there",
         "start:prod": "yarn run build && serve -s build",
         "ts": "tsc --noEmit",
         "lint": "eslint --ext js,ts,tsx src",
