add force flag to delete pr preview

--- a/.github/workflows/firebase-hosting-pr-close.yml
+++ b/.github/workflows/firebase-hosting-pr-close.yml
@@ -19,5 +19,5 @@ jobs:
       - name: Delete Firebase Hosting channel
         run: |
           npm install -g firebase-tools
-          firebase hosting:channel:delete 'pull-request-${{ github.event.pull_request.number }}' --token '${{ secrets.FIREBASE_CI_TOKEN }}'
+          firebase hosting:channel:delete 'pull-request-${{ github.event.pull_request.number }}' -f --token '${{ secrets.FIREBASE_CI_TOKEN }}'
         
