--- a/package.json
+++ b/package.json
@@ -21,6 +21,22 @@
         "@mui/material": "^5.1.0",
         "@mui/styled-engine-sc": "^5.1.0",
         "@reduxjs/toolkit": "^1.6.2",
+        "date-fns": "^2.25.0",
+        "i18next": "^21.5.0",
+        "i18next-browser-languagedetector": "^6.1.2",
+        "react": "^17.0.2",
+        "react-canvas-confetti": "^1.2.1",
+        "react-dom": "^17.0.2",
+        "react-helmet-async": "^1.1.2",
+        "react-i18next": "^11.14.2",
+        "react-redux": "^7.2.6",
+        "react-router-dom": "^6.0.2",
+        "redux-injectors": "^1.3.0",
+        "redux-saga": "^1.1.3",
+        "styled-components": "^5.3.3",
+        "uniqid": "^5.4.0"
+    },
+    "devDependencies": {
         "@types/lodash": "^4.14.177",
         "@types/node": "^16.11.7",
         "@types/react": "^17.0.35",
@@ -34,45 +50,30 @@
         "@types/webpack-env": "^1.16.3",
         "chalk": "^4.1.2",
         "cross-env": "^7.0.3",
-        "date-fns": "^2.25.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.25.3",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react-hooks": "^4.3.0",
         "eslint-plugin-simple-import-sort": "^7.0.0",
-        "i18next": "^21.5.0",
-        "i18next-browser-languagedetector": "^6.1.2",
         "i18next-scanner": "^3.1.0",
         "inquirer": "^8.2.0",
         "inquirer-directory": "^2.2.0",
         "node-plop": "^0.26.3",
         "plop": "^2.7.6",
         "prettier": "^2.4.1",
-        "react": "^17.0.2",
         "react-app-polyfill": "^2.0.0",
-        "react-canvas-confetti": "^1.2.1",
-        "react-dom": "^17.0.2",
-        "react-helmet-async": "^1.1.2",
-        "react-i18next": "^11.14.2",
-        "react-redux": "^7.2.6",
-        "react-router-dom": "^6.0.2",
         "react-scripts": "^4.0.3",
-        "redux-injectors": "^1.3.0",
-        "redux-saga": "^1.1.3",
         "rimraf": "^3.0.2",
         "sanitize.css": "^13.0.0",
         "serve": "^13.0.2",
         "shelljs": "^0.8.4",
-        "styled-components": "^5.3.3",
         "stylelint": "^14.1.0",
         "stylelint-config-recommended": "^6.0.0",
         "stylelint-config-styled-components": "^0.1.1",
         "stylelint-processor-styled-components": "^1.10.0",
         "ts-node": "^10.4.0",
-        "typescript": "^4.4.4",
-        "uniqid": "^5.4.0"
+        "typescript": "^4.4.4"
     },
-    "devDependencies": {},
     "browserslist": {
         "production": [
             ">0.2%",
