--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
         "extract-messages": "i18next-scanner --config=internals/extractMessages/i18next-scanner.config.js"
     },
     "dependencies": {
+        "@emotion/react": "^11.6.0",
+        "@emotion/styled": "^11.6.0",
         "@mui/icons-material": "^5.1.0",
         "@mui/lab": "^5.0.0-alpha.54",
         "@mui/material": "^5.1.0",
-        "@mui/styled-engine-sc": "^5.1.0",
         "@reduxjs/toolkit": "^1.6.2",
         "date-fns": "^2.25.0",
         "i18next": "^21.5.0",
