--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
         "lint": "eslint --ext js,ts,tsx src",
         "lint:fix": "yarn run eslint src --fix",
         "lint:css": "stylelint src/**/*.css",
-        "generate": "cross-env TS_NODE_PROJECT='./internals/ts-node.tsconfig.json' plop --plopfile internals/generators/plopfile.ts",
         "prettify": "prettier --write --ignore-unknown",
         "extract-messages": "i18next-scanner --config=internals/extractMessages/i18next-scanner.config.js"
     },
@@ -25,6 +24,7 @@
         "date-fns": "^2.25.0",
         "i18next": "^21.5.0",
         "i18next-browser-languagedetector": "^6.1.2",
+        "lodash": "^4.17.21",
         "react": "^17.0.2",
         "react-canvas-confetti": "^1.2.1",
         "react-dom": "^17.0.2",
@@ -34,7 +34,6 @@
         "react-router-dom": "^6.0.2",
         "redux-injectors": "^1.3.0",
         "redux-saga": "^1.1.3",
-        "styled-components": "^5.3.3",
         "uniqid": "^5.4.0"
     },
     "devDependencies": {
@@ -45,33 +44,20 @@
         "@types/react-redux": "^7.1.20",
         "@types/react-router-dom": "^5.3.2",
         "@types/rimraf": "^3.0.2",
-        "@types/shelljs": "^0.8.9",
-        "@types/styled-components": "^5.1.15",
         "@types/webpack": "^5.28.0",
         "@types/webpack-env": "^1.16.3",
-        "chalk": "^4.1.2",
-        "cross-env": "^7.0.3",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.25.3",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react-hooks": "^4.3.0",
         "eslint-plugin-simple-import-sort": "^7.0.0",
         "i18next-scanner": "^3.1.0",
-        "inquirer": "^8.2.0",
-        "inquirer-directory": "^2.2.0",
-        "node-plop": "^0.26.3",
-        "plop": "^2.7.6",
         "prettier": "^2.4.1",
         "react-app-polyfill": "^2.0.0",
         "react-scripts": "^4.0.3",
         "rimraf": "^3.0.2",
         "sanitize.css": "^13.0.0",
         "serve": "^13.0.2",
-        "shelljs": "^0.8.4",
-        "stylelint": "^14.1.0",
-        "stylelint-config-recommended": "^6.0.0",
-        "stylelint-config-styled-components": "^0.1.1",
-        "stylelint-processor-styled-components": "^1.10.0",
         "ts-node": "^10.4.0",
         "typescript": "^4.4.4"
     },
