--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   build:
     name: Build frontend
-    runs-on: 'ubuntu-latest'
+    runs-on: "ubuntu-latest"
     steps:
       - name: Checkout branch
         uses: actions/checkout@v2
@@ -14,24 +14,26 @@ jobs:
       - name: Setup Yarn
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
-          cache: 'yarn'
+          node-version: "16"
+          cache: "yarn"
 
       - name: Install dependencies
         run: yarn install
+        working-directory: frontend
 
       - name: Build app
         run: yarn build
+        working-directory: frontend
 
       - name: Upload build
         uses: actions/upload-artifact@v2
         with:
           name: frontend-preprod
-          path: build
+          path: frontend/build
 
   test:
     name: Test frontend
-    runs-on: 'ubuntu-latest'
+    runs-on: "ubuntu-latest"
     steps:
       - name: Checkout branch
         uses: actions/checkout@v2
@@ -39,35 +41,38 @@ jobs:
       - name: Setup Yarn
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
-          cache: 'yarn'
+          node-version: "16"
+          cache: "yarn"
 
       - name: Install dependencies
         run: yarn install
+        working-directory: frontend
 
       - name: Test app
         run: yarn test
+        working-directory: frontend
       # todo : add code coverage reports
 
   deploy_preprod:
     name: Deploy to Firebase Hosting preview (Preprod)
-    runs-on: 'ubuntu-latest'
+    runs-on: "ubuntu-latest"
     needs: [build, test]
     steps:
       - name: Checkout branch
         uses: actions/checkout@v2
-        
+
       - name: Download build
         uses: actions/download-artifact@v2
         with:
           name: frontend-preprod
-          path: build
+          path: frontend/build
 
       - name: Deploy to preprod
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_TASKS_OUREAPP }}'
-          projectId: '${{ secrets.FIREBASE_ID }}'
-          channelId: 'preprod'
+          entrypoint: frontend
+          repoToken: "${{ secrets.GITHUB_TOKEN }}"
+          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_TASKS_OUREAPP }}"
+          projectId: "${{ secrets.FIREBASE_ID }}"
+          channelId: "preprod"
           expires: 30d
