--- a/.github/workflows/firebase-hosting-release.yml
+++ b/.github/workflows/firebase-hosting-release.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   build:
     name: Build frontend
-    runs-on: 'ubuntu-latest'
+    runs-on: "ubuntu-latest"
     steps:
       - name: Checkout branch
         uses: actions/checkout@v2
@@ -14,24 +14,26 @@ jobs:
       - name: Setup Yarn
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
-          cache: 'yarn'
+          node-version: "16"
+          cache: "yarn"
 
       - name: Install dependencies
         run: yarn install
+        working-directory: frontend
 
       - name: Build app
         run: yarn build
+        working-directory: frontend
 
       - name: Upload build
         uses: actions/upload-artifact@v2
         with:
           name: frontend-preprod
-          path: build
+          path: frontend/build
 
   test:
     name: Test frontend
-    runs-on: 'ubuntu-latest'
+    runs-on: "ubuntu-latest"
     steps:
       - name: Checkout branch
         uses: actions/checkout@v2
@@ -39,36 +41,39 @@ jobs:
       - name: Setup Yarn
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
-          cache: 'yarn'
+          node-version: "16"
+          cache: "yarn"
 
       - name: Install dependencies
         run: yarn install
+        working-directory: frontend
 
       - name: Test app
         run: yarn test
+        working-directory: frontend
       # todo : add code coverage reports
 
   deploy_qa:
     name: Deploy to Firebase Hosting live (Prod)
-    runs-on: 'ubuntu-latest'
+    runs-on: "ubuntu-latest"
     needs: [build, test]
     steps:
       - name: Checkout branch
         uses: actions/checkout@v2
-        
+
       - name: Download Build
         uses: actions/download-artifact@v2
         with:
           name: frontend-preprod
-          path: build
+          path: frontend/build
 
       - name: Setup Node
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
-          
+          node-version: "16"
+
       - name: Deploy to Prod
-        run:  |
+        working-directory: frontend
+        run: |
           npm install -g firebase-tools
           firebase hosting:clone ${{ secrets.FIREBASE_ID }}:preprod ${{ secrets.FIREBASE_ID }}:live --token '${{ secrets.FIREBASE_CI_TOKEN }}'
