--- a/.github/workflows/linting-push.yml
+++ b/.github/workflows/linting-push.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   build:
     name: Lint code
-    runs-on: 'ubuntu-latest'
+    runs-on: "ubuntu-latest"
     steps:
       - name: Checkout branch
         uses: actions/checkout@v2
@@ -14,11 +14,13 @@ jobs:
       - name: Setup Yarn
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
-          cache: 'yarn'
+          node-version: "16"
+          cache: "yarn"
 
       - name: Install dependencies
         run: yarn install
+        working-directory: frontend
 
       - name: Lint code
         run: yarn lint
+        working-directory: frontend
